First endpoint is done
SQLite db added and /api/country endpoint is active

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,8 +1,11 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Filename=./Budalapi.db"
+  },
   "Logging": {
+    "IncludeScopes": false,
     "LogLevel": {
       "Default": "Warning"
     }
-  },
-  "AllowedHosts": "*"
+  }
 }
