--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -5,5 +5,8 @@
       "System": "Information",
       "Microsoft": "Information"
     }
-  }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=server;Initial Catalog=Budalapi.db;Trusted_Connection=True;MultipleActiveResultSets=true"},
+  "AllowedHosts": "*"
 }
