--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -8,5 +8,9 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=server;Initial Catalog=Budalapi.db;Trusted_Connection=True;MultipleActiveResultSets=true"},
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "SigningKey": "ThisismySecretKey",  
+  "Issuer": "Test.com",
+  "Audience" : "Budala"
+  
 }
