--- a/appsettings.json
+++ b/appsettings.json
@@ -7,5 +7,10 @@
     "LogLevel": {
       "Default": "Warning"
     }
-  }
+  },
+  "Jwt": {  
+    "SigningKey": "ThisismySecretKey",  
+    "Issuer": "Test.com",
+    "Audience" : "Budala"
+  } 
 }
